# augmentation_grpc_service

./: .gitignore  README.md  WORKSPACE  augmentation_grpc_service_deps.bzl
augmentation_grpc_service/: BUILD.bazel  __init__.py  grpc_server_async.py  grpc_server_sync.py
augmentation_grpc_service/augmentation_algorithms/: BUILD.bazel  __init__.py  prototype_algorithm.py
augmentation_grpc_service/augmentation_algorithms/camera_color_transform/: BUILD.bazel  __init__.py  camera_color_transform_algorithm.py
augmentation_grpc_service/augmentation_algorithms/camera_spec_transform/: BUILD.bazel  __init__.py  camera_spec_transform_algorithm.py
augmentation_grpc_service/augmentation_algorithms/camera_view_transform/: BUILD.bazel  __init__.py  camera_view_transform_algorithm.py
augmentation_grpc_service/augmentation_algorithms/lidar_transform/: BUILD.bazel  __init__.py  lidar_transform_algorithm.py
augmentation_grpc_service/augmentation_algorithms/radar_transform/: BUILD.bazel  __init__.py  radar_transform_algorithm.py
augmentation_grpc_service/augmentation_algorithms/validation/: BUILD.bazel  __init__.py  validation_algorithm.py
augmentation_grpc_service/services/: BUILD.bazel  __init__.py  camera_color_transform_algorithm_service.py  prototype_service_async.py  prototype_service_sync.py  prototype_validation_service_sync.py
docker/: Dockerfile
examples/: BUILD.bazel  camera_color_transform_server.py  client_example.py  prototype_example.py
protos/: BUILD.bazel  augmentation_service.proto  augmentation_service_message.proto  scenario_control.proto
tests/: BUILD.bazel  proto_test.py
