package(default_visibility = ["//visibility:public"])
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")


proto_library(
    name = "augmentation_service_message_proto",
    srcs = ["augmentation_service_message.proto"],
)

proto_library(
    name = "augmentation_service_proto",
    srcs = [
        "augmentation_service.proto",
    ],
    deps = [
        ":augmentation_service_message_proto",
    ],
)

py_proto_library(
    name = "augmentation_service_message_pb2",
    deps = [
        ":augmentation_service_message_proto",
    ]
)

py_proto_library(
    name = "augmentation_service_pb2",
    deps = [
        ":augmentation_service_proto",
    ]
)

py_grpc_library(
    name = "augmentation_service_pb2_grpc",
    srcs = [
        ":augmentation_service_proto"
    ],
    deps = [
        ":augmentation_service_pb2",
    ]
)
