package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")


py_library(
    name = "prototype_algorithm_lib",
    srcs = [
        "prototype_algorithm.py",
    ],
    deps = [
        requirement("numpy"),
    ],
)

py_binary(
    name = "prototype_algorithm",
    srcs = [
        "prototype_algorithm.py"
    ],
    deps = [
        requirement("numpy"),
    ],
)

py_library(
    name = "augmentation_algorithms",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":prototype_algorithm_lib",
        "//augmentation_grpc_service/augmentation_algorithms/camera_color_transform",
        "//augmentation_grpc_service/augmentation_algorithms/camera_spec_transform",
        "//augmentation_grpc_service/augmentation_algorithms/camera_view_transform",
        "//augmentation_grpc_service/augmentation_algorithms/lidar_transform",
        "//augmentation_grpc_service/augmentation_algorithms/radar_transform",
        "//augmentation_grpc_service/augmentation_algorithms/validation",
    ],
)