package(default_visibility = ["//visibility:public"])
load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")


py_proto_library(
    name = "scenario_control_message_pb2",
    deps = [
        "//protos:scenario_control_message_proto",
    ]
)

py_proto_library(
    name = "scenario_control_pb2",
    deps = [
        "//protos:scenario_control_proto",
    ]
)

py_grpc_library(
    name = "scenario_control_pb2_grpc",
    srcs = [
        "//protos:scenario_control_proto"
    ],
    deps = [
        ":scenario_control_pb2",
    ]
)

py_library(
    name = "prototype_service_async",
    srcs = [
        "prototype_service_async.py",
    ],
    deps = [
        requirement("grpcio"),
        ":scenario_control_pb2_grpc",
        ":scenario_control_message_pb2"
    ],
)

py_library(
    name = "prototype_service_sync",
    srcs = [
        "prototype_service_sync.py",
    ],
    deps = [
        requirement("grpcio"),
        ":scenario_control_pb2_grpc",
        ":scenario_control_message_pb2"
    ],
)