package(default_visibility = ["//visibility:public"])
load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")


py_library(
    name = "prototype_service_async",
    srcs = [
        "prototype_service_async.py",
    ],
    deps = [
        requirement("grpcio"),
        "//protos:scenario_control_pb2_grpc",
        "//protos:scenario_control_message_pb2"
    ],
)

py_library(
    name = "prototype_service_sync",
    srcs = [
        "prototype_service_sync.py",
    ],
    deps = [
        requirement("grpcio"),
        "//protos:scenario_control_pb2_grpc",
        "//protos:scenario_control_message_pb2",
        "//augmentation_grpc_service/augmentation_algorithms"
    ],
)


py_library(
    name = "services",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":prototype_service_async",
        ":prototype_service_sync",
    ],
)