package(default_visibility = ["//visibility:public"])
load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")


py_library(
    name = "camera_color_transform_algorithm_service",
    srcs = [
        "camera_color_transform_algorithm_service.py",
    ],
    deps = [
        requirement("grpcio"),
        "//protos:augmentation_service_pb2_grpc",
        "//protos:augmentation_service_message_pb2",
        "//augmentation_grpc_service/augmentation_algorithms/camera_color_transform"
    ],
)

py_library(
    name = "prototype_service_sync",
    srcs = [
        "prototype_service_sync.py",
    ],
    deps = [
        requirement("grpcio"),
        "//protos:augmentation_service_pb2_grpc",
        "//protos:augmentation_service_message_pb2",
        "//augmentation_grpc_service/augmentation_algorithms:prototype_algorithm"
    ],
)

py_library(
    name = "prototype_validation_service_sync",
    srcs = [
        "prototype_validation_service_sync.py",
    ],
    deps = [
        requirement("grpcio"),
        "//protos:augmentation_service_pb2_grpc",
        "//protos:augmentation_service_message_pb2",
        "//augmentation_grpc_service/augmentation_algorithms:prototype_algorithm"
    ],
)

py_library(
    name = "services",
    srcs = [
        "__init__.py",
    ],
    deps = [
        ":prototype_service_sync",
        ":prototype_validation_service_sync"
    ],
)