package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")


py_library(
    name = "camera_view_transform_algorithm_lib",
    srcs = [
        "camera_view_transform_algorithm.py",
    ],
    deps = [
        requirement("numpy"),
    ],
)

py_library(
    name = "camera_view_transform",
    srcs = [
        "__init__.py",
    ]
    deps = [
        ":camera_view_transform_algorithm_lib",
    ]
)