package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")


py_library(
    name = "radar_transform_algorithm_lib",
    srcs = [
        "radar_transform_algorithm.py",
    ],
    deps = [
        requirement("numpy"),
    ],
)

py_library(
    name = "radar_transform",
    srcs = [
        "__init__.py",
    ]
    deps = [
        ":radar_transform_algorithm_lib",
    ]
)