package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library")
load("@python_deps//:requirements.bzl", "requirement")


py_library(
    name = "validation_algorithm_lib",
    srcs = [
        "validation_algorithm.py",
    ],
    deps = [
        requirement("numpy"),
    ],
)

py_library(
    name = "validation",
    srcs = [
        "__init__.py",
    ]
    deps = [
        ":validation_algorithm_lib",
    ]
)